# PlatformUtils

./: CMakeLists.txt  README.md
Source/PlatformUtils/: IOUtils.cpp  IOUtils.h  MacOSUtils.mm  OSUtils.cpp  OSUtils.h  OSUtils_Common.cpp  OSUtils_Linux.cpp  OSUtils_POSIX.cpp  OSUtils_Windows.cpp  OSUtils_macOS.mm
